fix(eww): theme name too small

--- a/config/eww/styles/theme/main.scss
+++ b/config/eww/styles/theme/main.scss
@@ -14,6 +14,11 @@
         border-radius: 10px;
         padding: 10px;
 
+        .name {
+            font-size: 18px;
+            font-weight: bold;
+        }
+
         .color {
             border: 1px solid $base05;
             border-radius: 10px;
